# drone_traffic_control

./: README.md
flight_plan/: aguas_claras_flight_plan.plan
flogo/: SensorFeed.json  Telemetry.json
mavlink_driver/: CMakeLists.txt  main.cpp
